--- a/iDo/iDoDetailToDoListViewController.xib
+++ b/iDo/iDoDetailToDoListViewController.xib
@@ -14,7 +14,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screen Shot 2014-03-05 at 17.07.39.png" translatesAutoresizingMaskIntoConstraints="NO" id="vDV-h2-SWh">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="background.png" translatesAutoresizingMaskIntoConstraints="NO" id="vDV-h2-SWh">
                     <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
@@ -64,6 +64,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Screen Shot 2014-03-05 at 17.07.39.png" width="394" height="914"/>
+        <image name="background.png" width="394" height="914"/>
     </resources>
 </document>
